gcc/testsuite/rust.test/compilable/forward_decl_2.rs
fn main() {
    let y = x + 1;
}

static x: i32 = 3;
