gcc/testsuite/rust.test/fail_compilation/immutable1.rs
static x: i32 = 3;

fn main() {
    x = 1;
}
